# planecontrol

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  clang-format
.github/workflows/: c-cpp.yml
include/core/engine/: game.hpp  game_base.hpp  game_element.hpp  update_context.hpp
include/core/graphics/: coordinate.hpp  geometry.hpp  image_helper.hpp  polyline.hpp  rectangle.hpp  texture.hpp  vector.hpp
include/core/image/: image.hpp  png_image.hpp
include/core/ui/: drawable.hpp  event_manager.hpp  mouse.hpp  mouse_aware.hpp  mouse_event_args.hpp  mouse_pressed_event_args.hpp  renderer.hpp  sdl_context.hpp  sdl_deleter.hpp  window.hpp
include/game/: game.hpp
include/game/elements/: flight_track.hpp  plane.hpp  plane_factory.hpp
resources/levels/level_01/: level.json
resources/textures/: authors.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/engine/: game.cpp  game_base.cpp  update_context.cpp
src/core/graphics/: geometry.cpp  image_helper.cpp  polyline.cpp  rectangle.cpp  texture.cpp
src/core/image/: png_image.cpp
src/core/include/core/engine/: game_base.hpp  game_element.hpp  update_context.hpp
src/core/include/core/graphics/: animation.hpp  circle.hpp  color.hpp  geometry.hpp  polyline.hpp  rectangle.hpp  texture.hpp  vector.hpp
src/core/include/core/image/: image.hpp  png_image.hpp
src/core/include/core/io/: image.hpp  json_helper.hpp  png_image.hpp
src/core/include/core/ui/: drawable.hpp  event_manager.hpp  mouse.hpp  mouse_aware.hpp  mouse_event_args.hpp  sdl_context.hpp  sdl_deleter.hpp  window.hpp
src/core/src/engine/: game_base.cpp  update_context.cpp
src/core/src/graphics/: animation.cpp  circle.cpp  geometry.cpp  polyline.cpp  rectangle.cpp  texture.cpp
src/core/src/image/: png_image.cpp
src/core/src/io/: json_helper.cpp  png_image.cpp
src/core/src/ui/: event_manager.cpp  mouse.cpp  sdl_context.cpp  window.cpp
src/core/ui/: CMakeLists.txt  event_manager.cpp  mouse.cpp  renderer.cpp  sdl_context.cpp  window.cpp
src/game/: CMakeLists.txt  game.cpp
src/game/arch/: plane_states.puml
src/game/elements/: flight_track.cpp  plane.cpp  plane_factory.cpp
src/game/include/game/: game.hpp  level.hpp
src/game/include/game/data/: level_data.hpp
src/game/include/game/elements/: flight_track.hpp  parking_slot.hpp  plane.hpp  plane_factory.hpp  plane_state.hpp  runway.hpp
src/game/src/: game.cpp  level.cpp
src/game/src/elements/: flight_track.cpp  parking_slot.cpp  plane.cpp  plane_factory.cpp  plane_state.cpp  runway.cpp
